Fix z-index bug on Modal

--- a/app/frontend/src/scss/Modal.scss
+++ b/app/frontend/src/scss/Modal.scss
@@ -27,7 +27,6 @@
     box-shadow: 0 12px 25px 0 rgba(199, 175, 189, 0.25);
     overflow: hidden auto;
     .modal-closer {
-      z-index: 1;
       position: relative;
       float: right;
       width: 30px;
